--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
     "@angular/common": "2.0.0-rc.3",
     "@angular/compiler": "2.0.0-rc.3",
     "@angular/core": "2.0.0-rc.3",
+    "@angular/http": "2.0.0-rc.3",
     "@angular/platform-browser": "2.0.0-rc.3",
     "@angular/platform-browser-dynamic": "2.0.0-rc.3",
-    "@angular/http": "2.0.0-rc.3",
     "@angular/router": "3.0.0-beta.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.4",
+    "angular2": "^2.0.0-beta.17",
     "es6-shim": "^0.35.0",
     "ionic-angular": "2.0.0-beta.10",
     "ionic-native": "1.3.2",
     "ionicons": "3.0.0",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "del": "2.2.0",
